Fix inconsistent code block font sizes on iPhone Safari
Add -webkit-text-size-adjust: 100% to prevent iOS Safari's
text inflation algorithm from arbitrarily resizing text in
code blocks.

--- a/themes/vasudev/static/css/style.css
+++ b/themes/vasudev/static/css/style.css
@@ -40,6 +40,7 @@
 
 html {
   font-size: 17px;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
